# build

./: .gitignore  Dockerfile  README.md  build.sh  fix-location.sh  ins_pack.sh  linux-prebuilt.sh  macos-prebuilt.sh  main.py  memo.md  notes.txt  sources.list
.github/workflows/: main.yml
kp/: id_rsa  id_rsa.pub
test/: cmake-build-test.sh  meson-build-test.sh
test/src/: meson.build
